--- a/ProjectX/Base.lproj/LaunchScreen.storyboard
+++ b/ProjectX/Base.lproj/LaunchScreen.storyboard
@@ -18,8 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo2" translatesAutoresizingMaskIntoConstraints="NO" id="RKn-FV-zPB">
-                                <rect key="frame" x="0.0" y="147" width="375" height="349"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="New logo 18px" translatesAutoresizingMaskIntoConstraints="NO" id="IhG-aw-6lT">
+                                <rect key="frame" x="8" y="241" width="359" height="185"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
@@ -33,6 +33,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="logo2" width="1130" height="458"/>
+        <image name="New logo 18px" width="180" height="180"/>
     </resources>
 </document>
